
name:                coolbasic-haskell
version:             0.1.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Matti Lankinen
maintainer:          m.lankinen@iki.fi
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable cbhs-compiler
  hs-source-dirs:      src
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7, peggy ==0.3.2, containers ==0.5.0.0, pretty-tree ==0.1.0.0
  -- hs-source-dirs:
  default-language:    Haskell2010