
Name:                coolbasic-haskell
Version:             0.1.0
-- synopsis:
-- description:
License:             MIT
License-File:        LICENSE
Author:              Matti Lankinen
Maintainer:          m.lankinen@iki.fi
Build-Type:          Simple

Cabal-Version:       >=1.10

Executable cbhs-compiler
  Hs-Source-Dirs:      src
  Main-Is:             Main.hs
  -- other-modules:
  -- other-extensions:
  Build-Depends:       base >= 4, array, containers, mtl, regex-compat, pretty-tree
  Build-Tools:         alex, happy
  -- hs-source-dirs:
  Default-Language:    Haskell2010